/*
 * Copyright 2016 The Cartographer Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "point_viewer_proto_rust/src/proto.proto";

package point_viewer.grpc.proto;

service Octree {
  rpc GetMeta(GetMetaRequest) returns (GetMetaReply);
  rpc GetNodeData(GetNodeDataRequest) returns (GetNodeDataReply);
  rpc GetPointsInBox(GetPointsInBoxRequest)
      returns (stream PointsReply);
  rpc GetPointsInOrientedBeam(GetPointsInOrientedBeamRequest)
      returns (stream PointsReply);
  rpc GetPointsInFrustum(GetPointsInFrustumRequest)
      returns (stream PointsReply);
  rpc GetAllPoints(GetAllPointsRequest)
      returns (stream PointsReply);
}

message GetMetaRequest {
  string octree_id = 1;
}

message GetMetaReply {
  point_viewer.proto.Meta meta = 1;
}

message GetNodeDataRequest {
  string id = 1;
  string octree_id = 2;
}

message GetNodeDataReply {
  point_viewer.proto.Node node = 1;
  bytes position = 2;
  bytes color = 3;
}

message GetPointsInBoxRequest {
  point_viewer.proto.AxisAlignedCuboid bounding_box = 1;
  string octree_id = 2;
}

message GetPointsInOrientedBeamRequest {
  // A beam is a rectangle, specified by its half extents, extruded infinitely
  // far along its normal. The rotation and translation specify the transform
  // of a vertical (i.e. extending along the z axis) zero-centered beam. That
  // is, rotation + translation transform from beam-local coordinates into
  // world coordinates.
  point_viewer.proto.Quaterniond rotation = 1;
  point_viewer.proto.Vector3d translation = 2;
  point_viewer.proto.Vector2d half_extent = 3;
  string octree_id = 4;
}

message GetPointsInFrustumRequest {
  // Vector defining the translation.
  point_viewer.proto.Vector3d translation = 8;

  // Unit quaternion specifying the rotation.
  point_viewer.proto.Quaterniond rotation = 9;

  // Field of view angle in radians.
  double fovy_rad = 3;

  // Aspect ratio, i.e. width / height.
  double aspect = 4;

  // Distance from the viewer to the near clipping plane.
  double z_near = 5;

  // Distance from the viewer to the far clipping plane.
  double z_far = 6;

  string octree_id = 7;
}

message GetAllPointsRequest {
  string octree_id = 1;
}

message PointsReply {
  // For every point a position. This is guaranteed to contain entries.
  repeated point_viewer.proto.Vector3d positions = 4;
  
  // For every point a color value (R, G, B, A).
  repeated point_viewer.proto.Color colors = 2;
  
  // For every point an intensity value. Might not exist if there are no intensities.
  repeated float intensities = 3;
}
